--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
     <title>miaomiao系统</title>
     <link rel="stylesheet" href="/static/frame/layui/css/layui.css">
     <link rel="stylesheet" href="/static/frame/static/css/style.css">
@@ -62,7 +62,7 @@
                         <dl class="layui-nav-child">
                             <dd><a href="javascript:;" href-url="/naifu"><i
                                         class="layui-icon">&#xe621;</i>开始作画</a></dd>
-                            <dd><a href="javascript:;" href-url="/work"><i
+                            <dd><a href="javascript:;" href-url="/pic"><i
                                         class="layui-icon">&#xe621;</i>个人画图</a></dd>
                             <dd><a href="javascript:;" href-url="/worktodo"><i
                                         class="layui-icon">&#xe621;</i>画廊</a></dd>
